@@ -217,7 +217,7 @@ div.ui-resizable-handle {
   height: 20px;
   left: 1px;
   right: 1px;
-  bottom: 1px;
+  bottom: 0px;
 }
 
 .window_min,
